Fix egtest testAutomaticSigninPromoDismiss on iOS 9.

Bug: 761349
Change-Id: I2c8527817a062313f3b4545838db168b3aead763
Reviewed-on: https://chromium-review.googlesource.com/648827
Reviewed-by: Ramya Sharma <ramyasharma@chromium.org>
Commit-Queue: Marti Wong <martiw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499438}
Former-commit-id: 9b4b22dec8b71abf30cd1a2560bc2a955662e25f